fix(code): allow horizontal scroll

--- a/packages/docs/themes/cerebral-website/code/code.css
+++ b/packages/docs/themes/cerebral-website/code/code.css
@@ -9,4 +9,5 @@
   margin: 0;
   white-space: pre;
   display: block;
+  overflow-x: auto;
 }
